tests/valid/test_record_15.wyal
type Buffer is ({int[] data, int wp} this)

assert:
  forall(Buffer x, Buffer y, int[] ys):
     if:
         x != y{data:=ys}{wp:=0}
     then:
         (x.wp != 0) || (x.data != ys)

