tests/invalid/test_102.wyal
type Entry is ({int key, int value} r)

define Bijection(Entry[] es) is:
    forall(int i1, int i2):
        if:
            (es[i1].key == es[i2].key) || (es[i1].value == es[i2].value)
        then:
            i1 == i2

assert:
    Bijection([{key: 2, value: 3},
               {key: 3, value: 4},
               {key: 4, value: 4}])
